# napari-lumen-segmentation

./: README.md  setup.cfg  tox.ini
src/napari_lumen_segmentation/: __init__.py  _custom_table_widget.py  _distance_widget.py  _histogram_widget.py  _layer_dropdown.py  _plot_widget.py  _skeleton_widget.py  _widget.py  connected_components.py  copy_label_widget.py  custom_table_widget.py  distance_widget.py  erosion_dilation_widget.py  histogram_widget.py  image_calculator.py  layer_controls.py  main_widget.py  median_filter.py  morph_reconstruction_widget.py  multiple_view_widget.py  napari.yaml  plot_widget.py  save_labels_widget.py  size_filter_widget.py  skeleton_widget.py  smoothing_widget.py  threshold_widget.py
src/napari_lumen_segmentation/distance/: distance_widget.py  histogram_widget.py
src/napari_lumen_segmentation/layer_selection/: layer_manager.py
src/napari_lumen_segmentation/plots/: plot_widget.py
src/napari_lumen_segmentation/segmentation/: connected_components.py  erosion_dilation_widget.py  image_calculator.py  median_filter.py  morph_reconstruction_widget.py  size_filter_widget.py  smoothing_widget.py  threshold_widget.py  widget.py
src/napari_lumen_segmentation/skeleton/: skeleton_widget.py
src/napari_lumen_segmentation/tables/: custom_table_widget.py
