[metadata]
name = napari-lumen-segmentation
version = attr: napari_lumen_segmentation.__version__
description = A plugin for manually correcting cell segmentation in 3D (z, y, x) or 4D (t, z, y, x) (virtual) arrays.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AnniekStok/napari-lumen-segmentation
author = Anniek Stokkermans
author_email = anniek.stokkermans@gmail.com
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/AnniekStok/napari-lumen-segmentation/issues
    Documentation = https://github.com/AnniekStok/napari-lumen-segmentation#README.md
    Source Code = https://github.com/AnniekStok/napari-lumen-segmentation
    User Support = https://github.com/AnniekStok/napari-lumen-segmentation/issues

[options]
packages = find:
install_requires =
    napari
    numpy
    scikit-image
    napari-skimage-regionprops
    dask_image
    dask
    matplotlib
    diplib
    localthickness
    skan

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-lumen-segmentation = napari_lumen_segmentation:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/


[options.package_data]
* = *.yaml
